# Loqua

./: .dependency-cruiser.cjs  .git-blame-ignore-revs  .gitignore  .oxlintrc.json  .prettierignore  CLAUDE.md  PRD.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.claude/rules/: INDEX.md  meta-generator.md
.claude/rules/00-architecture/: 0-ddd-bounded-contexts.md  0-frontend-fsd-screaming.md  0-hexagonal-ports-adapters.md  0-monorepo-dependency-rule.md  0-pipeline-state-machine.md
.claude/rules/01-standards/: 1-code-standards.md
.claude/rules/02-programming-languages/: 2-rust-sidecars.md  2-typescript.md
.claude/rules/03-frameworks-and-libraries/: 3-hono-cloudflare-workers.md  3-model-runtimes.md  3-nextjs.md  3-react.md  3-tauri.md
.claude/rules/04-tools-and-configurations/: 4-package-installation.md
.claude/rules/05-workflows-and-processes/: 5-bug-finder.md  5-workflow.md
.claude/rules/07-quality-assurance/: 7-eval-harness-ia.md  7-tests.md
.claude/rules/08-domain-specific-rules/: 8-privacy-egress.md
.github/workflows/: ci.yml
.husky/: pre-push
apps/desktop/: package.json
apps/desktop/scripts/: build-sidecar.mjs  dev-frontend.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/llm-sidecar/: Cargo.toml
apps/desktop/src-tauri/llm-sidecar/src/: main.rs
apps/desktop/src-tauri/src/: clips.rs  correction.rs  lib.rs  main.rs  models.rs  storage.rs  stt.rs  validation.rs
apps/web/: .oxlintrc.json  next.config.ts  package.json  tsconfig.json  turbo.json  vitest.config.ts
apps/web/public/: sqlite-worker.mjs
apps/web/scripts/: copy-sqlite-wasm.mjs
apps/web/src/: composition-root.ts  composition-root.tsx
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/composition-root/: adapters.ts  correction-app-context.ts  correction-app.ts  index.ts  provider.tsx  use-consent-controls.ts  use-correction-pipeline.ts  use-learning-bootstrap.ts  use-review-preference.ts  use-session-persistence.ts
apps/web/src/entities/review/: view-model.ts  view-model.unit.test.ts
apps/web/src/entities/session/: record.ts  view-model.ts  (+1 more)
services/api/: .oxlintrc.json  package.json  tsconfig.json  wrangler.toml
services/api/src/: anthropic.ts  app.integration.test.ts  index.ts
specs/: ARCHITECTURE.md  PRD.md  SPIKES.md  SPRINTS.md
tooling/eval/: package.json  tsconfig.json
tooling/eval/results/: README.md  baseline-local.json  baseline.json
tooling/eval/src/: index.ts  llm-judge.ts  local-subject.ts  main.ts  runner.ts  runner.unit.test.ts  validator.ts
tooling/eval/src/golden-set/: cases.ts  sample.ts  types.ts
(+27 files in other folders)
