[package]
name = "loqua-desktop"
version = "0.1.0"
description = "Loqua — coach vocal d'anglais, 100 % local"
edition = "2021"
default-run = "loqua-desktop"

[lib]
name = "loqua_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SQLite natif chiffré au repos (SQLCipher, ARCHITECTURE §13)
rusqlite = { version = "0.37", features = ["bundled-sqlcipher-vendored-openssl"] }
getrandom = "0.3"
thiserror = "2"
# STT natif whisper.cpp (Spike #3) — inférence 100 % locale
whisper-rs = "0.14"
hound = "3"
# Download des modèles à la première utilisation (ModelRuntimePort) + checksum
ureq = "2"
sha2 = "0.10"

# WebKitGTK (Linux) refuse getUserMedia par défaut et n'affiche AUCUNE invite de
# permission : on doit activer enable-media-stream et gérer permission-request
# côté Rust (voir lib.rs). Déjà dans l'arbre via wry ; version épinglée sur celle
# de Tauri — les types doivent s'unifier avec PlatformWebview::inner().
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.2"

[profile.release]
strip = true

# LLM local = binaire séparé (lot 4.3) : whisper-rs et llama-cpp-2 embarquent
# chacun leur ggml et ne peuvent pas être linkés dans le même binaire. Le
# sidecar est un process enfant (invariant #1 : aucun réseau ; §15 : IPC validé).
[workspace]
members = ["llm-sidecar"]
