[package]
name = "loqua-llm-sidecar"
version = "0.1.0"
description = "Loqua — sidecar d'inférence LLM local (llama.cpp), 100 % local"
edition = "2021"

[[bin]]
name = "loqua-llm-sidecar"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# llama.cpp — version épinglée (lib d'inférence), build CPU
llama-cpp-2 = "=0.1.150"
